--- a/Week2/index.html
+++ b/Week2/index.html
@@ -6,7 +6,7 @@
     <title>Task</title>
 </head>
 <body>
-    <button type="button" style="color:pink" >logArray</button>
+    <button type="button" style="color:pink" onclick="">logArray</button>
     <script src="index.js"></script>
 </body>
 </html>
