--- a/Week2/index.html
+++ b/Week2/index.html
@@ -6,7 +6,8 @@
     <title>Task</title>
 </head>
 <body>
-    <button type="button" style="color:pink" onclick="">logArray</button>
+    <button type="button" style="color:blue" onclick="isInsertNumber()">LogArray</button>
+    <button type="button" style="color:blue" onclick="isAccept()">LogArrayContents</button>
     <script src="index.js"></script>
 </body>
 </html>
