--- a/Week2/index.html
+++ b/Week2/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <button type="button" style="color:blue" onclick="isInsertNumber()">LogArray</button>
-    <button type="button" style="color:blue" onclick="isAccept()">LogArrayContents</button>
+    <button type="button" style="color:blue" onclick="acceptContent()">LogArrayContents</button>
+    <button type="button" style="color:blue" onclick="checkArray()">CheckArray</button>
     <script src="index.js"></script>
 </body>
 </html>
